<resources>
    <string name="app_name">FitGoals</string>
    <string name="strength_button_text">Strength Training</string>
    <string name="running_button_text">Running</string>
    <string name="previous_runs_btext">Previous Runs</string>
    <string name="new_run_btext">Log a new run</string>
    <string name="title_activity_previous_runs">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="run_name_textviewtxt">Run Name:</string>
    <string name="run_name_hint">Enter name here</string>
    <string name="run_time_textviewtxt">Time:</string>
    <string name="run_time_hint">Enter time here</string>
    <string name="run_distance_textviewtxt">Distance (km):</string>
    <string name="run_distance_hint">Enter distance here</string>
    <string name="log_run_btext">Log Run</string>
    <string name="empty_not_saved">Run not saved</string>
    <string name="default_display_run_text">TextView</string>
    <string name="run_settings_edit">Edit Run</string>
    <string name="run_settings_delete">Delete Run</string>
    <string name="run_saved">Run saved</string>
    <string name="run_details">Run Details</string>
    <string name="prev_runs_title">Previous Runs</string>
    <string name="log_run_title">Log a Run</string>
    <string name="strength_home_title">Strength Training</string>
    <string name="run_home_title">Running</string>
    <string name="run_name_label">Run Name:</string>
    <string name="run_time_label">Time:</string>
    <string name="run_dist_label">Distance:</string>
    <string name="run_date_label">Date Recorded:</string>
    <string name="colon">:</string>
    <string name="save_run_btext">Save run</string>
    <string name="edit_run_title">Edit Run</string>
    <string name="pace_calc_title">Pace Calculator</string>
    <string name="rhome_log_run_desc">Add a new run to your run log</string>
    <string name="rhome_prev_runs_desc">View a list of previously logged runs</string>
    <string name="race_predict_button">Race Predictor</string>
    <string name="rhome_race_predict_desc">Calculate a prediction of your race time</string>
</resources>
